# lyrics-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
k8s/: deployment.yaml
src/lyrics_mcp/: __main__.py  server.py
src/music_mcp/: __main__.py  server.py
