[project]
name = "lyrics-mcp"
version = "0.1.0"
description = "MCP server that generates song lyrics from a description using LangChain + Gemini"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "langchain-google-genai>=2.1.0",
    "langchain-core>=0.3.0",
]

[project.scripts]
lyrics-mcp = "lyrics_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lyrics_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
