[project]
name = "music-mcp"
version = "0.1.0"
description = "MCP server that generates instrumental music using Google Lyria RealTime"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "google-genai>=1.0.0",
    "minio>=7.2.0",
]

[project.scripts]
music-mcp = "music_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/music_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
